feat: slice template frontend mobile

--- a/public/admin/app-ext.css
+++ b/public/admin/app-ext.css
@@ -45,7 +45,7 @@ a {
 
 .btn-outline-white {
   border-color: #eaeaea !important;
-  color: #7c7777 !important;
+  color: #7c7777;
 }
 
 .btn-outline-white:hover {
