fear: slice design homepage and courses

--- a/public/mobilekit/assets/css/custom.css
+++ b/public/mobilekit/assets/css/custom.css
@@ -7,12 +7,15 @@ a { color: #076b89; }
 .bg-brand { background-color: #3BC0CF !important}
 .bg-brand-2 { background-color: #157CA1 !important}
 .backlayer { width: 100%; height: 150px; position: absolute; z-index: -10; border-radius: 0 0 25px 25px}
-.glassmorph { backdrop-filter: blur(5px); -webkit-backdrop-filter: blur(5px); border: 1px solid rgba(255, 255, 255, 0.3)}
+.glassmorph { backdrop-filter: blur(5px); -webkit-backdrop-filter: blur(5px); border: 1px solid rgba(255, 255, 255, 0.3);background: rgba(255, 255, 255, 0.1) !important;}
 .smallthin {  font-size: .74em; line-height: 14px !important; font-weight: 500;}
 .text-primary { color: #157CA1 !important}
+.rounded-thumbnail { border-radius: 15px !important}
 dl { margin-bottom: .5rem; }
 .page-content p, .page-content li { font-size: 1rem; line-height: 1.5rem; }
 .swiper-thumbnail-image { height: 150px; object-fit: cover; }
+.bg-grey {background-color: #161616 !important;}
+.rounded-20 { border-radius: 20px !important; }
 .scroll-thumbnail-video { height: 235px; object-fit: cover; }
 .text-elipsis { display: -webkit-box;-webkit-box-orient: vertical;overflow: hidden;text-overflow: ellipsis;max-height: calc(3 * 1.5em);line-height: 1.5em; }
 .text-elipsis-3 { -webkit-line-clamp: 3; line-clamp: 3; }
