--- a/public/mobilekit/assets/css/custom.css
+++ b/public/mobilekit/assets/css/custom.css
@@ -1,8 +1,15 @@
+body {background: #f9f9f9 !important;}
 #appCapsule{position:relative;margin-bottom:env(safe-area-inset-bottom);margin-top:env(safe-area-inset-top)}
 .input-icon-append{display:flex;align-items:center;justify-content:center;color:#4F5050;height:38px;font-size:24px;position:absolute;right:7px;bottom:1px;width:32px;opacity:.5}
 a { color: #076b89; }
-#appCapsule{ min-height: 100vh; background-color: #FFF;}
-.appBottomMenu, .appHeader, #appCapsule, .extraHeader { max-width: 475px; margin: 0 auto}
+.appHeader {position: sticky;}
+#appCapsule{ min-height: 100vh; background-color: #F9F9F9; padding-top: 0;}
+.appBottomMenu, .appHeader, #appCapsule, .extraHeader { max-width: 630px; margin: 0 auto}
+
+.container-large {margin: 0 auto;}
+.container-large .appHeader, 
+.container-large #appCapsule, 
+.container-large .extraHeader { max-width: 1024px; margin: 0 auto}
 .appHeader.bg-brand { box-shadow: none !important}
 .bg-brand { background-color: #3BC0CF !important}
 .bg-brand-2 { background-color: #157CA1 !important}
@@ -142,4 +149,50 @@ button.vanilla-calendar-day__btn.alpa, .presensi-status-container.alpa { backgro
 .dark-mode-active .card,
 .dark-mode-active #template-container {
     background-color: rgba(var(--bs-dark-rgb), var(--bs-bg-opacity)) !important;
+}
+
+.sidebar {
+    display: none;
+    top:0; 
+    left:0;
+    border-right: 1px solid #cfdadf;
+    height:100%;
+    width: 206px;
+}
+.sidebar .icon-box-transparent {
+    font-size: 28px !important;
+}
+.sidebar .in {
+    font-size: 16px;
+    color: #555;
+    line-height: 0;
+}
+.sidebar .image-listview > li a.item:after {
+    display: none !important;
+}
+
+@media (min-width: 768px) {
+    .header-mobile-only .appHeader {
+        display: none;
+    }
+    .appBottomMenu {
+        display: none;
+    }
+    .container-large {margin-left: 210px;}
+    .sidebar {
+        display: block !important;
+    }
+}
+@media (min-width: 768px) and (max-width: 1043.98px) {
+    .container-large {margin-left: 60px;}
+    .sidebar {
+        width: 60px !important;
+        overflow: hidden;
+    }
+    .sidebar .sidebar-logo {
+        padding-left: 11px !important;
+    }
+    .sidebar .image-listview > li .item {
+        padding: 12px !important;
+    }
 }
