--- a/public/mobilekit/assets/css/style.css
+++ b/public/mobilekit/assets/css/style.css
@@ -24,7 +24,7 @@ body {
   /* Color theme */
   --primary: #79B2CD;
   --light-primary: #C9E5F0;
-  --ultra-light-primary: #FBF8F1;
+  --ultra-light-primary: #f0eadc;
   --secondary: #F96E2B;
   --light-secondary: #FFE4D7;
 }
@@ -998,283 +998,283 @@ button:hover, button:active, button:focus {
 }
 
 .m-0 {
-  margin: 0 !important;
+  margin: 0;
 }
 
 .m-05 {
-  margin: 5px !important;
+  margin: 5px;
 }
 
 .m-1 {
-  margin: 8px !important;
+  margin: 8px;
 }
 
 .m-2 {
-  margin: 16px !important;
+  margin: 16px;
 }
 
 .m-3 {
-  margin: 24px !important;
+  margin: 24px;
 }
 
 .m-4 {
-  margin: 32px !important;
+  margin: 32px;
 }
 
 .m-5 {
-  margin: 40px !important;
+  margin: 40px;
 }
 
 .mt-0 {
-  margin-top: 0 !important;
+  margin-top: 0;
 }
 
 .mt-05 {
-  margin-top: 5px !important;
+  margin-top: 5px;
 }
 
 .mt-1 {
-  margin-top: 8px !important;
+  margin-top: 8px;
 }
 
 .mt-2 {
-  margin-top: 16px !important;
+  margin-top: 16px;
 }
 
 .mt-3 {
-  margin-top: 24px !important;
+  margin-top: 24px;
 }
 
 .mt-4 {
-  margin-top: 32px !important;
+  margin-top: 32px;
 }
 
 .mt-5 {
-  margin-top: 40px !important;
+  margin-top: 40px;
 }
 
 .mb-0 {
-  margin-bottom: 0px !important;
+  margin-bottom: 0px;
 }
 
 .mb-05 {
-  margin-bottom: 5px !important;
+  margin-bottom: 5px;
 }
 
 .mb-1 {
-  margin-bottom: 8px !important;
+  margin-bottom: 8px;
 }
 
 .mb-2 {
-  margin-bottom: 16px !important;
+  margin-bottom: 16px;
 }
 
 .mb-3 {
-  margin-bottom: 24px !important;
+  margin-bottom: 24px;
 }
 
 .mb-4 {
-  margin-bottom: 32px !important;
+  margin-bottom: 32px;
 }
 
 .mb-5 {
-  margin-bottom: 40px !important;
+  margin-bottom: 40px;
 }
 
 .ms-0 {
-  margin-left: 0 !important;
+  margin-left: 0;
 }
 
 .ms-05 {
-  margin-left: 5px !important;
+  margin-left: 5px;
 }
 
 .ms-1 {
-  margin-left: 8px !important;
+  margin-left: 8px;
 }
 
 .ms-2 {
-  margin-left: 16px !important;
+  margin-left: 16px;
 }
 
 .ms-3 {
-  margin-left: 24px !important;
+  margin-left: 24px;
 }
 
 .ms-4 {
-  margin-left: 32px !important;
+  margin-left: 32px;
 }
 
 .ms-5 {
-  margin-left: 40px !important;
+  margin-left: 40px;
 }
 
 .me-0 {
-  margin-right: 0px !important;
+  margin-right: 0px;
 }
 
 .me-05 {
-  margin-right: 5px !important;
+  margin-right: 5px;
 }
 
 .me-1 {
-  margin-right: 8px !important;
+  margin-right: 8px;
 }
 
 .me-2 {
-  margin-right: 16px !important;
+  margin-right: 16px;
 }
 
 .me-3 {
-  margin-right: 24px !important;
+  margin-right: 24px;
 }
 
 .me-4 {
-  margin-right: 32px !important;
+  margin-right: 32px;
 }
 
 .me-5 {
-  margin-right: 40px !important;
+  margin-right: 40px;
 }
 
 .p-0 {
-  padding: 0 !important;
+  padding: 0;
 }
 
 .p-05 {
-  padding: 5px !important;
+  padding: 5px;
 }
 
 .p-1 {
-  padding: 8px !important;
+  padding: 8px;
 }
 
 .p-2 {
-  padding: 16px !important;
+  padding: 16px;
 }
 
 .p-3 {
-  padding: 24px !important;
+  padding: 24px;
 }
 
 .p-4 {
-  padding: 32px !important;
+  padding: 32px;
 }
 
 .p-5 {
-  padding: 40px !important;
+  padding: 40px;
 }
 
 .pt-0 {
-  padding-top: 0px !important;
+  padding-top: 0px;
 }
 
 .pt-05 {
-  padding-top: 5px !important;
+  padding-top: 5px;
 }
 
 .pt-1 {
-  padding-top: 8px !important;
+  padding-top: 8px;
 }
 
 .pt-2 {
-  padding-top: 16px !important;
+  padding-top: 16px;
 }
 
 .pt-3 {
-  padding-top: 24px !important;
+  padding-top: 24px;
 }
 
 .pt-4 {
-  padding-top: 32px !important;
+  padding-top: 32px;
 }
 
 .pt-5 {
-  padding-top: 40px !important;
+  padding-top: 40px;
 }
 
 .pb-0 {
-  padding-bottom: 0px !important;
+  padding-bottom: 0px;
 }
 
 .pb-05 {
-  padding-bottom: 5px !important;
+  padding-bottom: 5px;
 }
 
 .pb-1 {
-  padding-bottom: 8px !important;
+  padding-bottom: 8px;
 }
 
 .pb-2 {
-  padding-bottom: 16px !important;
+  padding-bottom: 16px;
 }
 
 .pb-3 {
-  padding-bottom: 24px !important;
+  padding-bottom: 24px;
 }
 
 .pb-4 {
-  padding-bottom: 32px !important;
+  padding-bottom: 32px;
 }
 
 .pb-5 {
-  padding-bottom: 40px !important;
+  padding-bottom: 40px;
 }
 
 .ps-0 {
-  padding-left: 0px !important;
+  padding-left: 0px;
 }
 
 .ps-05 {
-  padding-left: 5px !important;
+  padding-left: 5px;
 }
 
 .ps-1 {
-  padding-left: 8px !important;
+  padding-left: 8px;
 }
 
 .ps-2 {
-  padding-left: 16px !important;
+  padding-left: 16px;
 }
 
 .ps-3 {
-  padding-left: 24px !important;
+  padding-left: 24px;
 }
 
 .ps-4 {
-  padding-left: 32px !important;
+  padding-left: 32px;
 }
 
 .ps-5 {
-  padding-left: 40px !important;
+  padding-left: 40px;
 }
 
 .pe-0 {
-  padding-right: 0px !important;
+  padding-right: 0px;
 }
 
 .pe-05 {
-  padding-right: 5px !important;
+  padding-right: 5px;
 }
 
 .pe-1 {
-  padding-right: 8px !important;
+  padding-right: 8px;
 }
 
 .pe-2 {
-  padding-right: 16px !important;
+  padding-right: 16px;
 }
 
 .pe-3 {
-  padding-right: 24px !important;
+  padding-right: 24px;
 }
 
 .pe-4 {
-  padding-right: 32px !important;
+  padding-right: 32px;
 }
 
 .pe-5 {
-  padding-right: 40px !important;
+  padding-right: 40px;
 }
 
 h1,
