--- a/public/mobilekit/assets/css/custom.css
+++ b/public/mobilekit/assets/css/custom.css
@@ -173,6 +173,12 @@ button.vanilla-calendar-day__btn.alpa, .presensi-status-container.alpa { backgro
     display: none !important;
 }
 
+.sidebar .image-listview > li a.item.active,
+.sidebar .image-listview > li a.item.active .in {
+    background: #79b2cd;
+    color: white !important;
+}
+
 .sidebar .sidebar-logo {
     padding: 20px;
 }
