--- a/public/mobilekit/assets/css/style.css
+++ b/public/mobilekit/assets/css/style.css
@@ -468,8 +468,9 @@ button:hover, button:active, button:focus {
   transition: none;
 }
 
-.appBottomMenu .item:active {
+.appBottomMenu .item.active {
   opacity: .8;
+  background-color: #79b2cd !important;
 }
 
 .appBottomMenu .item.active:before {
@@ -478,8 +479,9 @@ button:hover, button:active, button:focus {
 
 .appBottomMenu .item.active i.bi,
 .appBottomMenu .item.active i.icon,
-.appBottomMenu .item.active ion-icon {
-  color: #ffd9c6 !important;
+.appBottomMenu .item.active ion-icon,
+.appBottomMenu .item.active .col strong {
+  color: white;
   font-weight: 500;
   text-shadow: 0 0 15px #fff;
 }
