Fix showing quiz

--- a/public/mobilekit/assets/css/style.css
+++ b/public/mobilekit/assets/css/style.css
@@ -4690,7 +4690,7 @@ textarea,
   cursor: pointer;
   position: relative;
   min-height: 20px;
-  padding: 0px 0 0 32px;
+  padding: 0px 0 5px 32px;
   line-height: 1.7em;
   color: #141515;
 }
@@ -4698,7 +4698,7 @@ textarea,
 .form-check .form-check-label:after {
   position: absolute;
   left: 0;
-  top: 0;
+  top: 2px;
   content: "";
   display: block;
   width: 22px;
@@ -4715,7 +4715,7 @@ textarea,
   height: 22px;
   position: absolute;
   left: 0;
-  top: 0;
+  top: 2px;
   z-index: 3;
   opacity: 0;
   background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 20 20'%3e%3cpath fill='none' stroke='%23fff' stroke-linecap='round' stroke-linejoin='round' stroke-width='2' d='M6 10l3 3l6-6'/%3e%3c/svg%3e");
