Fix data in home course

--- a/public/mobilekit/assets/css/style.css
+++ b/public/mobilekit/assets/css/style.css
@@ -22,7 +22,7 @@ body {
 
 :root {
   /* Color theme */
-  --primary: #79B2CD;
+  --primary: #4a97bb;
   --light-primary: #C9E5F0;
   --ultra-light-primary: #fdf9f0;
   --secondary: #F96E2B;
