--- a/public/mobilekit/assets/css/custom.css
+++ b/public/mobilekit/assets/css/custom.css
@@ -211,3 +211,7 @@ button.vanilla-calendar-day__btn.alpa, .presensi-status-container.alpa { backgro
 .text-success-darker {
     color: #2E7D32 !important;
 }
+
+div#lesson_text_container img {
+    width: 100%;
+}
