Show warning if user access course is expired

--- a/public/mobilekit/assets/css/custom.css
+++ b/public/mobilekit/assets/css/custom.css
@@ -273,3 +273,19 @@ div#lesson_text_container img {
         /* Ukuran font yang Anda inginkan saat dicetak */
     }
 }
+
+/* Animasi shaky */
+@keyframes shaky {
+  0%   { transform: rotate(0deg); }
+  20%  { transform: rotate(10deg); }
+  40%  { transform: rotate(-10deg); }
+  60%  { transform: rotate(10deg); }
+  80%  { transform: rotate(-10deg); }
+  100% { transform: rotate(0deg); }
+}
+
+.shaky-icon {
+  display: inline-block;
+  animation: shaky 0.8s infinite;
+  transform-origin: center;
+}
